...
    <string name="enable">Enable</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved!</string>
    <string name="reminder_deleted">Reminder Deleted!</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the location reminder app</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="clear_map">Clear Map</string>
    <string name="enable_my_location">Enable My Location</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="point_of_interest">Point of interest</string>
    <string name="poi">poi</string>
    <string name="location_service_rationale_for_save_reminder_fragment">Location reminders do not work with location services disabled</string>
    <string name="location_service_rationale_for_select_location_fragment">Your location cannot be shown on the map with location services disabled</string>
    <string name="fine_location_permission_rationale">Location permission is required to display your current location.</string>
    <string name="background_location_permission_rationale">You need to grant full location permission in order for location reminders to work.</string>
    <string name="settings">Settings</string>
    <string name="select_poi">Please select a point of interest</string>
    <string name="location_added">Location added</string>
    <string name="location_updated">Location updated</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofence_not_added">Problem in adding geofence.</string>
    <string name="geofence_not_deleted">Problem in deleting geofence.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>
    <string name="add_reminder">Add a reminder</string>
    <string name="save_reminder">Save reminder</string>
    <string name="notification_icon">Notification icon</string>
    <string name="reminder_for_location"><![CDATA[Reminder for location <b>%1$s</b><br/>(Lat: %2$.5f, Long: %3$.5f, Radius: %4$fm)]]></string>
    <string name="geofence_added">Geofence has been added</string>

    <!-- Authentication -->
    <string name="auth_signed_out">Signed out</string>
    <string name="auth_sign_in_successful">Sign in successful</string>
    <string name="auth_sign_in_cancelled">Sign in cancelled</string>
    <string name="auth_sign_in_unsuccessful">Sign in unsuccessful</string>

    <!-- Error strings -->
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
...
