...
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/remindersRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:liveData="@{viewModel.remindersList}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/noDataTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fadeVisible="@{viewModel.showNoData.booleanValue()}"
                    android:gravity="center"
                    android:text="@string/no_data"
                    android:textSize="@dimen/text_size_large"
...
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addReminderFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/margin_normal"
            android:contentDescription="@string/add_reminder"
            app:fabSize="normal"
...
